--- a/main/templates/detailpage.html
+++ b/main/templates/detailpage.html
@@ -6,7 +6,7 @@
 		<div class="semi_title">
 		{% block semi_title %}{% endblock %}
 		</div>
-		<div class="sub_title marginb30">
+		<div class="sub_title marginbottom20-xs">
 		{% block sub_title %}{% endblock %}
 		</div>
 	</div>
