--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 html, body {
   width: 100%; }
 
+/* no padding */
 .no-padding {
   padding: 0; }
 
@@ -23,7 +24,13 @@ html, body {
 .no-padding-tb {
   padding: 0; }
 
-.margintop30 {
+@media (max-width: 767px) {
+  .no-padding-xs {
+    padding-left: 0px;
+    padding-right: 0px; } }
+
+/* marig top */
+.margintop20 {
   margin-top: 30px; }
 
 .margintop30 {
@@ -38,6 +45,7 @@ html, body {
 .margintop80 {
   margin-top: 80px; }
 
+/* margin bottom */
 .marginbottom30 {
   margin-bottom: 30px; }
 
@@ -51,6 +59,7 @@ html, body {
   margin-left: auto;
   margin-right: auto; }
 
+/* pading top */
 .paddingtop30 {
   padding-top: 30px; }
 
@@ -63,6 +72,7 @@ html, body {
 .paddingtop60 {
   padding-top: 60px; }
 
+/* padding bottom */
 .paddingbottom30 {
   padding-bottom: 30px; }
 
@@ -75,11 +85,7 @@ html, body {
 .paddingbottom60 {
   padding-bottom: 60px; }
 
-@media (max-width: 767px) {
-  .no-padding-xs {
-    padding-left: 0px;
-    padding-right: 0px; } }
-
+/* margin and padding when it is xs */
 @media (max-width: 767px) {
   .margintop30, .margintop50, .margintop60, .margintop80 {
     margin-top: 0px; }
@@ -98,6 +104,12 @@ html, body {
 
   .margintop10-xs {
     margin-top: 10px; }
+
+  .marginbottom30 {
+    margin-bottom: 0px; }
+
+  .marginbottom20-xs {
+    margin-bottom: 20px; }
 
   .paddingtop30, .paddingtop40, .paddingtop50, .paddingtop60 {
     padding-top: 0px; }
