--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -18,92 +18,97 @@
 
 		<ul id="menu-content" class="menu-content collapse out">
 
+			<li data-toggle="collapse" class="collapsed hidden-sm hidden-xs" style="visibility: hidden;">
+				<a href="#">병원 소개</a>
+			</li>
+
+
 			<li data-toggle="collapse" data-target="#intro" class="collapsed">
-				<a href="#">병원 소개</a><span class="caret pull-right"></span>
+				<a href="#">병원 소개<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="intro">
 				<li>수클리닉소개</li>
 				<li>병원둘러보기</li>
-				<li>오시는길</li>
+				<li><a href="{% url 'main:map' %}">오시는길</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#whitening" class="collapsed">
 				<a href="#">기미/잡티/화이트닝<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="whitening">
-				<li>레이저토닝VRM4</li>
-				<li>미백레가또</li>
-				<li>타겟팅</li>
-				<li>백옥주사</li>
+				<li><a href="{% url 'main:laser' %}">레이저토닝VRM4</a></li>
+				<li><a href="{% url 'main:whitening' %}">미백레가또</a></li>
+				<li><a href="{% url 'main:targeting' %}">타겟팅</a></li>
+				<li><a href="{% url 'main:jade' %}">백옥주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#peeling" class="collapsed">
 				<a href="#">필링/재생<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="peeling">
-				<li>스펙트라필</li>
-				<li>아쿠아필</li>
-				<li>연예인필(더말코드)</li>
-				<li>라떼필(스트롱,마일드)</li>
+				<li><a href="{% url 'main:spectra' %}">스펙트라필</a></li>
+				<li><a href="{% url 'main:aqua' %}">아쿠아필</a></li>
+				<li><a href="{% url 'main:celebrity' %}">연예인필(더말코드)</a></li>
+				<li><a href="{% url 'main:latte' %}">라떼필(스트롱,마일드)</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#scar" class="collapsed">
 				<a href="#">흉터/모공/튼살치료<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="scar">
-				<li>레가토</li>
-				<li>PRP(와이셀 바이오)</li>
-				<li>테라필</li>
+				<li><a href="{% url 'main:legato' %}">레가토</a></li>
+				<li><a href="{% url 'main:prp' %}">PRP(와이셀 바이오)</a></li>
+				<li><a href="{% url 'main:tera' %}">테라필</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#botox" class="collapsed">
 				<a href="#">필러/보톡스<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="botox">
-				<li>필러(이브아르,채움)</li>
-				<li>보톡스(메디톡신,보튤렉스)</li>
+				<li><a href="{% url 'main:filler' %}">필러(이브아르,채움)</a></li>
+				<li><a href="{% url 'main:botox' %}">보톡스(메디톡신,보튤렉스)</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#young" class="collapsed">
 				<a href="#">쁘띠/동안시술<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="young">
-				<li>다크서클주사</li>
-				<li>콧볼축소</li>
-				<li>하이코</li>
-				<li>더마톡신</li>
-				<li>마녀주사</li>
+				<li><a href="{% url 'main:darkcircle' %}">다크서클주사</a></li>
+				<li><a href="{% url 'main:kotppol' %}">콧볼축소</a></li>
+				<li><a href="{% url 'main:highnose' %}">하이코</a></li>
+				<li><a href="{% url 'main:dermotoxin' %}">더마톡신</a></li>
+				<li><a href="{% url 'main:witch' %}">마녀주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#lifting" class="collapsed">
 				<a href="#">윤곽/리프팅<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="lifting">
-				<li>5단계 치료솔루션</li>
+				<li><a href="{% url 'main:doublero' %}">더블로S</a></li>
+				<li><a href="{% url 'main:thread' %}">실리프팅(엔파인더스)</a></li>
+				<li><a href="{% url 'main:bigeyes' %}">왕눈이리프팅</a></li>
+				<li><a href="{% url 'main:contour' %}">윤곽주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#pimple" class="collapsed">
 				<a href="#">여드름<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="pimple">
-				<li>더블로S</li>
-				<li>실리프팅(엔파인더스)</li>
-				<li>왕눈이리프팅</li>
-				<li>윤곽주사</li>
+				<li><a href="{% url 'main:pimple' %}">5단계 치료솔루션</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#fat" class="collapsed">
 				<a href="#">비만/체형관리<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="fat">
-				<li>냉동지방파괴쿨쉐이핑</li>
-				<li>지방분해주사</li>
-				<li>파워메조테라피</li>
-				<li>카복시</li>
-				<li>슬림주사</li>
-				<li>HPL</li>
-				<li>고주파</li>
-				<li>신데렐라주사</li>
+				<li><a href="{% url 'main:coolshaping' %}">냉동지방파괴쿨쉐이핑</a></li>
+				<li><a href="{% url 'main:lipolysis' %}">지방분해주사</a></li>
+				<li><a href="{% url 'main:mesotherapie' %}">파워메조테라피</a></li>
+				<li><a href="{% url 'main:carboxy' %}">카복시</a></li>
+				<li><a href="{% url 'main:slim' %}">슬림주사</a></li>
+				<li><a href="{% url 'main:hpl' %}">HPL</a></li>
+				<li><a href="{% url 'main:highfrequency' %}">고주파</a></li>
+				<li><a href="{% url 'main:cinderella' %}">신데렐라주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#community" class="collapsed">
