--- a/suclinic/templates/left.navbar.html
+++ b/suclinic/templates/left.navbar.html
@@ -21,7 +21,7 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
 							<li class="">
-								<a href="./" id="intro">병원 소개<span style="float: right">></span></a>
+								<a href="./" id="intro">병원 소개</a>
 							</li>
 							<li class="">
 								<a href="./" id="whitening">기미/잡티/화이트닝</a>
