네비바 간격 수정

--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -10,15 +10,15 @@
 				<img src="{% static 'img/logo.png' %}" class="img-responsive">
 			</a>
 		</div>
-		<a href="tel:82+3027675" style="float: right; width: 30px; margin: 7px;">
-			<img src="{% static 'img/tel-icon.png' %}" class="img-responsive hidden-md hidden-lg">
+		<a href="tel:82+3027675" style="float: right; width: 30px; margin: 7px;" class=" hidden-md hidden-lg">
+			<img src="{% static 'img/tel-icon.png' %}" class="img-responsive">
 		</a>
 	</div>
 	<div class="menu-list">
 
 		<ul id="menu-content" class="menu-content collapse out">
 
-			<li data-toggle="collapse" class="collapsed hidden-sm hidden-xs" style="visibility: hidden;">
+			<li data-toggle="collapse" class="collapsed hidden-sm hidden-xs" style="display: none;">
 				<a href="#">병원 소개</a>
 			</li>
 
