--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,14 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  color: black;
+  color: #1b1c1d;
   /* 화면 크기 1872 이상 일때, 고해상도 노트북 이상 일 때 설정*/ }
   @media screen and (min-width: 992px) {
     .nav-side-menu {
       width: 10.5%; } }
-  .nav-side-menu ul > li {
-    padding-left: 10px; }
+  @media screen and (max-width: 991px) {
+    .nav-side-menu ul > li {
+      padding-left: 10px; } }
   .nav-side-menu .sub-menu li {
     padding-left: 20px; }
   .nav-side-menu .caret {
@@ -30,7 +31,11 @@
   display: block;
   text-align: center;
   font-size: 14px;
-  margin-bottom: 30px; }
+  /* 화면 크기 1872 이상 일때, 고해상도 노트북 이상 일 때 설정*/ }
+  @media screen and (min-width: 992px) {
+    .nav-side-menu .brand {
+      margin-top: 20px;
+      margin-bottom: 10px; } }
 
 .nav-side-menu .toggle-btn {
   display: none; }
@@ -83,7 +88,7 @@
   background-color: white;
   border: none;
   line-height: 28px;
-  border-bottom: 0px solid lightgray;
+  border-bottom: 0px solid #e9eaeb;
   margin-left: 0px; }
 
 .nav-side-menu ul .sub-menu li:hover,
@@ -96,7 +101,7 @@
 
 .nav-side-menu li a {
   text-decoration: none;
-  color: black; }
+  color: #1b1c1d; }
 
 .nav-side-menu li a i {
   padding-left: 10px;
@@ -144,6 +149,13 @@ body {
   margin: 0px;
   padding: 0px; }
 
+/* 화면 크기 1872 이상 일때, 고해상도 노트북 이상 일 때 설정*/
+@media screen and (min-width: 992px) {
+  .menu-list li {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
+    padding-left: 0; } }
 html, body {
   width: 100%; }
 
