--- a/static/scss/_sidebar1.scss
+++ b/static/scss/_sidebar1.scss
@@ -8,14 +8,16 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  color: black;
+  color: #1b1c1d;
   @include responsive(md) {
   	width: 10.5%;
   }
 
-  ul > li {
-  	padding-left: 10px;
-  }
+	@media screen and (max-width:991px){
+	  ul > li {
+	  	padding-left: 10px;
+	  }
+	}
   .sub-menu {
   	li {
   		padding-left: 20px;
@@ -33,7 +35,10 @@
   display: block;
   text-align: center;
   font-size: 14px;
-  margin-bottom: 30px;
+  @include responsive(md){
+	  margin-top: 20px;
+	  margin-bottom: 10px;
+  }
 }
 .nav-side-menu .toggle-btn {
   display: none;
@@ -87,7 +92,7 @@
   background-color: white;
   border: none;
   line-height: 28px;
-  border-bottom: 0px solid lightgray;
+  border-bottom: 0px solid #e9eaeb;
   margin-left: 0px;
 }
 .nav-side-menu ul .sub-menu li:hover,
@@ -110,7 +115,7 @@
 }
 .nav-side-menu li a {
   text-decoration: none;
-  color: black;
+  color: #1b1c1d;
 }
 .nav-side-menu li a i {
   padding-left: 10px;
@@ -163,4 +168,17 @@
 body {
   margin: 0px;
   padding: 0px;
+}
+@include responsive(md) {
+	.menu-list {
+		li{
+			margin-left: 15px;
+			margin-right: 15px;
+			margin-top: 10px;
+			padding-left: 0;
+			a {
+				// padding-bottom: 15px;
+			}
+		}
+	}
 }
