--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -10,11 +10,11 @@ HOME > 병원 소개 > 오시는 길
 {% endblock %}
 
 {% block main %}
-	<img src="{% static 'img/map/title.jpg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/map/title.jpg' %}" class="img-responsive content-border1 paddingtop60">
 {% endblock %}
 
 {% block mainsm %}
-	<img src="{% static 'img/map/subtitle.jpg' %}" class="img-responsive">
+	<img src="{% static 'img/map/subtitle.jpg' %}" class="img-responsive content-border1 paddingtop30-xs">
 {% endblock %}
 
 {% block common %}
@@ -22,11 +22,11 @@ HOME > 병원 소개 > 오시는 길
 {% endblock %}
 
 {% block detail %}
-	<img src="{% static 'img/map/big.jpeg' %}" class="img-responsive minmax">
+	<img src="{% static 'img/map/big.jpeg' %}" class="img-responsive content-border2">
 {% endblock %}
 
 {% block detailsm %}
-	<img src="{% static 'img/map/sm.jpeg' %}" class="img-responsive">
+	<img src="{% static 'img/map/sm.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
 
 
