--- a/static/css/style.css
+++ b/static/css/style.css
@@ -156,6 +156,9 @@ body {
     margin-right: 15px;
     margin-top: 10px;
     padding-left: 0; } }
+.menu-list ul a {
+  font-size: 10pt; }
+
 html, body {
   width: 100%; }
 
