--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -13,11 +13,11 @@
 			</div>
 
 			<div class="col-xs-42 visible-xs no-padding bgcolorblk" style="padding-top:20px; padding-bottom:20px; display: none;">
-				<div class="col-xs-21" style="border-right:1px solid gray;">
+				<div class="col-xs-21 no-padding" style="border-right:1px solid gray;">
 					<img src="{% static 'img/footer_m_1.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 					<img src="{% static 'img/footer_m_3.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 				</div>
-				<div class="col-xs-21">
+				<div class="col-xs-21 no-padding">
 					<img src="{% static 'img/footer_m_2.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 					<img src="{% static 'img/footer_m_4.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 				</div>
