--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -10,7 +10,7 @@
     	</div>
 
 			<div class="col-sm-42 md30 hidden-xs">
-				<img src="{% static 'img/main/visual4.jpeg' %}" class="img-responsive minmax">
+				<img src="{% static 'img/main/visual4.jpg' %}" class="img-responsive minmax">
 			</div>
 		</div>
 		<div class="col-sm-42 col-xs-42">
