--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "../account_base.html" %}
 {% load i18n %}
 {% load staticfiles %}
 {% load socialaccount %}
@@ -37,6 +37,8 @@
 	border-color:#3b5998;
 }
 .form_label{
+		width:100px;
+		float:left;
     border-radius: 5px;
     padding:1.5%;
     color : white;
@@ -56,36 +58,53 @@
     padding:1px;
     margin: 5%;
 }
+@media screen and (max-width: 767px){
+	.login_form{
+    width : 180px;
+    margin : 0 auto;
+}
+	h4{
+		font-size:13pt;
+	}
+	.form_label{
+		margin-bottom:5px;
+	}
+}
 </style>
 {% endblock %}
+{% block semi_title %}
+로그인
+{% endblock %}
 
-{% block content %}
+{% block sub_title %}
+HOME > 로그인
+{% endblock %}
 
-
-<center>
-<div id="content">
-    <h1>로그인</h1>
-		<form action="" method="POST" enctype="multipart/form-data">
+{% block social_login %}
+<form action="" method="POST" enctype="multipart/form-data" class="col-xs-42">
+		<div class="col-sm-30 col-sm-offset-6 paddingtop30" style="border-top:3px solid black;">
 		    {% get_providers as providers %} {% for provider in providers %}
-		    <a title="{{ provider.name }}" href="{% provider_login_url provider.id process='login' scope=scope auth_params=auth_params %}" class="btn btn-social btn-{{ provider.id }}">
+		    <a title="{{ provider.name }}" href="{% provider_login_url provider.id process='login' scope=scope auth_params=auth_params %}" class="btn btn-social btn-{{ provider.id }} col-sm-21 col-xs-42">
 		            <h4 style="text-transform: uppercase;">{{ provider.name }} 계정으로 로그인</h4>
 		    </a>
 		    {% endfor %}
+		</div>
 		</form>
+{% endblock %}
 
-
+{% block form_content %}
+	<div class="col-xs-42">
     <form action="." method="post" id="general_login" class="login_form">
-        {% csrf_token %} {% if form.errors %}
+        {% csrf_token %}
+        {% if form.errors %}
         <p class="errornote">사용자 정보를 다시 입력해주십시오.</p>
         {% endif %}
-        <fieldset class="aligned">
             <div class="form-row">
                 <span class="form_label">회원 ID</span> {{form.username}}
             </div>
             <div class="form-row">
                 <span class="form_label">비밀번호</span> {{form.password}}
             </div>
-        </fieldset>
         <div class="submit-row">
             <input type="submit" value="Log In" />
             <!-- <input type = "hidden" name = "next" value="{{next}}"/>  이거 주석처리해서 아까 settings.py에 있는 곳으로 기본
@@ -95,6 +114,6 @@
         document.getElementById('id_username').focus();
         </script>
     </form>
-</div>
-</center>
+  </div>
+
 {% endblock %}
