--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -84,7 +84,7 @@ HOME > 로그인
 <form action="" method="POST" enctype="multipart/form-data" class="col-xs-42">
 		<div class="col-sm-30 col-sm-offset-6 paddingtop30" style="border-top:3px solid black;">
 		    {% get_providers as providers %} {% for provider in providers %}
-		    <a title="{{ provider.name }}" href="{% provider_login_url provider.id process='login' scope=scope auth_params=auth_params %}" class="btn btn-social btn-{{ provider.id }} col-sm-21 col-xs-42">
+		    <a title="{{ provider.name }}" href="{% provider_login_url provider.id process='login' scope=scope auth_params=auth_params %}" class="btn btn-social btn-{{ provider.id }} col-sm-21 col-xs-42 marginbottom10-xs margintop10-xs">
 		            <h4 style="text-transform: uppercase;">{{ provider.name }} 계정으로 로그인</h4>
 		    </a>
 		    {% endfor %}
