--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -12,7 +12,7 @@
 			</ul>
 			</div>
 
-			<div class="col-xs-42 visible-xs no-padding bgcolorblk" style="padding-top:20px; padding-bottom:20px; display: none;">
+			<div class="col-xs-42 visible-xs no-padding bgcolorblk" style="padding-top:10px; display: none;">
 				<div class="col-xs-21 no-padding" style="border-right:1px solid gray;">
 					<img src="{% static 'img/footer_m_1.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 					<img src="{% static 'img/footer_m_3.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
@@ -21,7 +21,7 @@
 					<img src="{% static 'img/footer_m_2.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 					<img src="{% static 'img/footer_m_4.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 				</div>
-				<div class="col-xs-38" style="border-top:1px solid gray; margin-left:15px; margin-right:15px; margin-top:10px;">
+				<div class="col-xs-42 no-padding" style="border-top:1px solid gray; margin-right:15px; margin-top:10px;">
 					<img src="{% static 'img/footer_m_5.jpg' %}" class="img-responsive minmax no-padding">
 				</div>
 	</div>
