--- a/main/templates/whitening/jade.html
+++ b/main/templates/whitening/jade.html
@@ -25,3 +25,11 @@
 {% block detailsm %}
 	<img src="{% static 'img/whitening/jade2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#whitening4', '#whitening')
+	});
+</script>
+{% endblock javascript %}
