--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -27,99 +27,99 @@
 				<a href="#">병원소개<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="intro">
-				<li>수클리닉 소개</li>
-				<li>의료진 소개</li>
-				<li>병원 둘러보기</li>
-				<li><a href="{% url 'main:map' %}">오시는 길</a></li>
+				<li id="intro1">수클리닉 소개</li>
+				<li id="intro2">의료진 소개</li>
+				<li id="intro3">병원 둘러보기</li>
+				<li id="intro4"><a href="{% url 'main:map' %}">오시는 길</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#whitening" class="collapsed">
 				<a href="#">화이트닝 / 기미 / 잡티<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="whitening">
-				<li><a href="{% url 'main:laser' %}">레이저 토닝</a></li>
-				<li><a href="{% url 'main:whitening' %}">미백 레가또</a></li>
-				<li><a href="{% url 'main:targeting' %}">타겟팅</a></li>
-				<li><a href="{% url 'main:jade' %}">백옥주사</a></li>
+				<li id="whitening1"><a href="{% url 'main:laser' %}">레이저 토닝</a></li>
+				<li id="whitening2"><a href="{% url 'main:whitening' %}">미백 레가또</a></li>
+				<li id="whitening3"><a href="{% url 'main:targeting' %}">타겟팅</a></li>
+				<li id="whitening4"><a href="{% url 'main:jade' %}">백옥주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#peeling" class="collapsed">
 				<a href="#">필링 / 재생<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="peeling">
-				<li><a href="{% url 'main:spectra' %}">스펙트라필</a></li>
-				<li><a href="{% url 'main:aqua' %}">아쿠아필</a></li>
-				<li><a href="{% url 'main:celebrity' %}">연예인필</a></li>
-				<li><a href="{% url 'main:latte' %}">라떼필</a></li>
+				<li id="peeling1"><a href="{% url 'main:spectra' %}">스펙트라필</a></li>
+				<li id="peeling2"><a href="{% url 'main:aqua' %}">아쿠아필</a></li>
+				<li id="peeling3"><a href="{% url 'main:celebrity' %}">연예인필</a></li>
+				<li id="peeling4"><a href="{% url 'main:latte' %}">라떼필</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#scar" class="collapsed">
 				<a href="#">흉터 / 모공 / 튼살치료<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="scar">
-				<li><a href="{% url 'main:legato' %}">레가토</a></li>
-				<li><a href="{% url 'main:prp' %}">PRP(자가혈)</a></li>
-				<li><a href="{% url 'main:tera' %}">테라필</a></li>
+				<li id="scar1"><a href="{% url 'main:legato' %}">레가토</a></li>
+				<li id="scar2"><a href="{% url 'main:prp' %}">PRP(자가혈)</a></li>
+				<li id="scar3"><a href="{% url 'main:tera' %}">테라필</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#botox" class="collapsed">
 				<a href="#">필러 / 보톡스<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="botox">
-				<li><a href="{% url 'main:filler' %}">필러</a></li>
-				<li><a href="{% url 'main:botox' %}">보톡스</a></li>
+				<li id="botox1"><a href="{% url 'main:filler' %}">필러</a></li>
+				<li id="botox2"><a href="{% url 'main:botox' %}">보톡스</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#young" class="collapsed">
 				<a href="#">쁘띠 / 동안시술<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="young">
-				<li><a href="{% url 'main:darkcircle' %}">다크서클 주사</a></li>
-				<li><a href="{% url 'main:kotppol' %}">콧볼축소</a></li>
-				<li><a href="{% url 'main:highnose' %}">하이코</a></li>
-				<li><a href="{% url 'main:dermotoxin' %}">더마톡신</a></li>
-				<li><a href="{% url 'main:witch' %}">마녀주사</a></li>
+				<li id="young1"><a href="{% url 'main:darkcircle' %}">다크서클 주사</a></li>
+				<li id="young2"><a href="{% url 'main:kotppol' %}">콧볼축소</a></li>
+				<li id="young3"><a href="{% url 'main:highnose' %}">하이코</a></li>
+				<li id="young4"><a href="{% url 'main:dermotoxin' %}">더마톡신</a></li>
+				<li id="young5"><a href="{% url 'main:witch' %}">마녀주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#lifting" class="collapsed">
 				<a href="#">윤곽 / 리프팅<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="lifting">
-				<li><a href="{% url 'main:doublero' %}">더블로-S</a></li>
-				<li><a href="{% url 'main:thread' %}">실 리프팅</a></li>
-				<li><a href="{% url 'main:bigeyes' %}">왕눈이 리프팅</a></li>
-				<li><a href="{% url 'main:contour' %}">윤곽주사</a></li>
+				<li id="lifting1"><a href="{% url 'main:doublero' %}">더블로-S</a></li>
+				<li id="lifting2"><a href="{% url 'main:thread' %}">실 리프팅</a></li>
+				<li id="lifting3"><a href="{% url 'main:bigeyes' %}">왕눈이 리프팅</a></li>
+				<li id="lifting4"><a href="{% url 'main:contour' %}">윤곽주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#pimple" class="collapsed">
 				<a href="#">여드름<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="pimple">
-				<li><a href="{% url 'main:pimple' %}">여드름</a></li>
+				<li id="pimple1"><a href="{% url 'main:pimple' %}">여드름</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#fat" class="collapsed">
 				<a href="#">비만 / 체형관리<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="fat">
-				<li><a href="{% url 'main:coolshaping' %}">쿨쉐이핑</a></li>
-				<li><a href="{% url 'main:lipolysis' %}">지방분해 주사</a></li>
-				<li><a href="{% url 'main:mesotherapie' %}">파워 메조테라피</a></li>
-				<li><a href="{% url 'main:carboxy' %}">카복시</a></li>
-				<li><a href="{% url 'main:slim' %}">슬림주사</a></li>
-				<li><a href="{% url 'main:hpl' %}">HPL</a></li>
-				<li><a href="{% url 'main:highfrequency' %}">고주파</a></li>
-				<li><a href="{% url 'main:cinderella' %}">신데렐라 주사</a></li>
+				<li id="fat1"><a href="{% url 'main:coolshaping' %}">쿨쉐이핑</a></li>
+				<li id="fat2"><a href="{% url 'main:lipolysis' %}">지방분해 주사</a></li>
+				<li id="fat3"><a href="{% url 'main:mesotherapie' %}">파워 메조테라피</a></li>
+				<li id="fat4"><a href="{% url 'main:carboxy' %}">카복시</a></li>
+				<li id="fat5"><a href="{% url 'main:slim' %}">슬림주사</a></li>
+				<li id="fat6"><a href="{% url 'main:hpl' %}">HPL</a></li>
+				<li id="fat7"><a href="{% url 'main:highfrequency' %}">고주파</a></li>
+				<li id="fat8"><a href="{% url 'main:cinderella' %}">신데렐라 주사</a></li>
 			</ul>
 
 			<li data-toggle="collapse" data-target="#community" class="collapsed">
 				<a href="#">커뮤니티<span class="caret"></span></a>
 			</li>
 			<ul class="sub-menu collapse" id="community">
-				<li><a href="{% url 'blog:counsel_list' %}">온라인 상담</a></li>
-				<li><a href="{% url 'blog:beforeafter_list' %}">전후 사진</a></li>
-				<li><a href="{% url 'blog:notice_list' %}">공지/이벤트</a></li>
-				<li><a href="{% url 'blog:review_list' %}">고객후기</a></li>
+				<li id="community1"><a href="{% url 'blog:counsel_list' %}">온라인 상담</a></li>
+				<li id="community2"><a href="{% url 'blog:beforeafter_list' %}">전후 사진</a></li>
+				<li id="community3"><a href="{% url 'blog:notice_list' %}">공지/이벤트</a></li>
+				<li id="community4"><a href="{% url 'blog:review_list' %}">고객후기</a></li>
 			</ul>
 
 		</ul>
