--- a/main/templates/botox/botox.html
+++ b/main/templates/botox/botox.html
@@ -25,3 +25,11 @@ HOME > 보톡스/필러 > 보톡스
 {% block detailsm %}
 	<img src="{% static 'img/botox/botox2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#botox2', '#botox')
+	});
+</script>
+{% endblock javascript %}
