--- a/main/templates/contour/bigeyes.html
+++ b/main/templates/contour/bigeyes.html
@@ -25,3 +25,11 @@ HOME > 윤곽/리프팅 > 왕눈이리프팅
 {% block detailsm %}
 	<img src="{% static 'img/contour/bigeyes2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#lifting3', '#lifting')
+	});
+</script>
+{% endblock javascript %}
