--- a/main/templates/obesity/mesotherapie.html
+++ b/main/templates/obesity/mesotherapie.html
@@ -25,3 +25,11 @@ HOME > 비만/체형관리 > 파워메조테라피
 {% block detailsm %}
 	<img src="{% static 'img/obesity/mesotherapie2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#fat3', '#fat')
+	});
+</script>
+{% endblock javascript %}
