--- a/main/templates/petit/highnose.html
+++ b/main/templates/petit/highnose.html
@@ -25,3 +25,11 @@ HOME > 쁘띠/동안 > 하이코
 {% block detailsm %}
 	<img src="{% static 'img/petit/highnose2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#young3', '#young')
+	});
+</script>
+{% endblock javascript %}
