--- a/main/templates/pimple/pimple.html
+++ b/main/templates/pimple/pimple.html
@@ -25,3 +25,11 @@ HOME > 여드름
 {% block detailsm %}
 	<img src="{% static 'img/pimple/pimple2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#pimple1', '#pimple')
+	});
+</script>
+{% endblock javascript %}
