--- a/main/templates/scar/tera.html
+++ b/main/templates/scar/tera.html
@@ -25,3 +25,11 @@ HOME > 흉터/모공/튼살 > 테라필
 {% block detailsm %}
 	<img src="{% static 'img/scar/tera2s.jpg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#scar3', '#scar')
+	});
+</script>
+{% endblock javascript %}
