--- a/main/templates/whitening/whitening.html
+++ b/main/templates/whitening/whitening.html
@@ -24,3 +24,11 @@
 {% block detailsm %}
 	<img src="{% static 'img/whitening/legato2s.jpeg' %}" class="img-responsive content-border2 paddingtop20-xs">
 {% endblock %}
+
+{% block javascript %}
+<script type="text/javascript">
+	$(document).ready(function(){
+		activelist('#whitening2', '#whitening')
+	});
+</script>
+{% endblock javascript %}
