--- a/suclinic/templates/javascript.html
+++ b/suclinic/templates/javascript.html
@@ -2,3 +2,12 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script>
+	function activelist(li, ul){
+		$(li).addClass('active');
+		$(li).parent().addClass('in');
+		$('li[data-target="'+ul+'"]').attr('aria-expanded', 'true');
+	}
+	$(document).ready(function() {
+	});
+</script>
