--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -21,9 +21,28 @@
 					<img src="{% static 'img/footer_m_2.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 					<img src="{% static 'img/footer_m_4.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
 				</div>
+				<!--
 				<div class="col-xs-42 no-padding" style="border-top:1px solid gray; margin-right:15px; margin-top:10px;">
 					<img src="{% static 'img/footer_m_5.jpg' %}" class="img-responsive minmax no-padding">
 				</div>
+				-->
+				<div class="col-xs-38 col-xs-offset-2" style="border-top:1px solid gray; margin-top:10px;"></div>
+				<div class="col-xs-26 col-xs-offset-8 no-padding">
+					<img src="{% static 'img/footer_m_6.jpg' %}" class="img-responsive minmax no-padding">
+				</div>
+				<div class="col-xs-42 no-padding marginbottom20-xs">
+
+				<div class="col-centered text-center no-padding">
+			   <ul class="footer_nav center-text">
+			       <li><a href="{% url 'accounts:login' %}">로그인<span class="vertical-bar"></span></a></li>
+			       <li><a href="{% url 'accounts:signup' %}">회원가입<span class="vertical-bar"></span></a></li>
+			       <li><a href="#">개인정보취급방침<span class="vertical-bar"></span></a></li>
+			       <li><a href="#">회원약관</a></li>
+			    </ul>
+			  </div>
+
+			</div>
+
 	</div>
 
 
