--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -170,6 +170,10 @@ html, body{
 	}
 
 }
+.col-centered{
+	float:none;
+	margin:0 auto;
+}
 
 .img-responsive.minmax {
 	min-width: 100%;
@@ -256,4 +260,38 @@ footer{
 	min-height: 1px;
 	width: 3.5%;
 	float: left;
+}
+footer{
+	.footer_nav>li>a{
+		font-size:6pt;
+		position:relative;
+		display:block;
+		color:#fefefe;
+		padding:10px 0px;
+		text-decoration: none;
+	}
+	.footer_nav{
+		li{
+			float:left;
+			position:relative;
+			display:block;
+		}
+		list-style:none;
+		display:inline-block;
+		float: none;
+		margin:0px;
+	}
+
+
+
+	.vertical-bar{
+		margin-top:1px;
+		vertical-align: top;
+		display:inline-block;
+		margin-left:15px;
+		margin-right:15px;
+		width:1px;
+		background-color:#fefefe;
+		height:8px;
+	}
 }
