푸터 수정 및 네비바 작은 버전 마진수정

--- a/suclinic/templates/footer.html
+++ b/suclinic/templates/footer.html
@@ -19,7 +19,7 @@
 				</div>
 				<div class="col-xs-21 no-padding">
 					<img src="{% static 'img/footer_m_2.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
-					<img src="{% static 'img/footer_m_4.jpg' %}" class="img-responsive col-xs-42 minmax no-padding">
+					<img src="{% static 'img/footer_m_4.jpeg' %}" class="img-responsive col-xs-42 minmax no-padding">
 				</div>
 				<!--
 				<div class="col-xs-42 no-padding" style="border-top:1px solid gray; margin-right:15px; margin-top:10px;">
