--- a/static/css/style.css
+++ b/static/css/style.css
@@ -405,6 +405,9 @@ footer .vertical-bar {
 .navbar-default {
   background-color: white; }
 
+@media (max-width: 991px) {
+  .nav-side-menu {
+    margin-bottom: 0px; } }
 .navbar-fixed-side .caret {
   float: right;
   margin-top: 8px; }
