--- a/static/scss/_sidebar.scss
+++ b/static/scss/_sidebar.scss
@@ -2,6 +2,12 @@
 	background-color: white;
 }
 
+@media (max-width:991px){
+	.nav-side-menu{
+		margin-bottom:0px;
+	}
+}
+
 .navbar-fixed-side {
 	.caret {
 		float: right;
