--- a/suclinic/templates/left.navbar.1.html
+++ b/suclinic/templates/left.navbar.1.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="left-navbar nav-side-menu">
 	<div style="text-align: center;">
-		<button class="navbar-toggle" data-target="#menu-content" data-toggle="collapse" style="float: left; width: 30px;padding: 0; border: none; margin: 11px;">
+		<button class="navbar-toggle" data-target="#menu-content" data-toggle="collapse" style="float: left; width: 30px;padding: 0; border: none; margin: 12px;">
 			<span class="sr-only">Menu</span>
 			<img src="{% static 'img/icon-bar.png' %}" class="img-responsive">
 		</button>
@@ -10,7 +10,7 @@
 				<img src="{% static 'img/logo.png' %}" class="img-responsive">
 			</a>
 		</div>
-		<a href="tel:82+3027675" style="float: right; width: 30px; margin: 9px;" class=" hidden-md hidden-lg">
+		<a href="tel:82+3027675" style="float: right; width: 30px; margin: 10px;" class=" hidden-md hidden-lg">
 			<img src="{% static 'img/tel-icon.png' %}" class="img-responsive">
 		</a>
 	</div>
@@ -38,7 +38,7 @@
 			</li>
 			<ul class="sub-menu collapse" id="whitening">
 				<li id="whitening1"><a href="{% url 'main:laser' %}">레이저 토닝</a></li>
-				<li id="whitening2"><a href="{% url 'main:whitening' %}">미백 레가또</a></li>
+				<li id="whitening2"><a href="{% url 'main:whitening' %}">미백 레가토</a></li>
 				<li id="whitening3"><a href="{% url 'main:targeting' %}">타겟팅</a></li>
 				<li id="whitening4"><a href="{% url 'main:jade' %}">백옥주사</a></li>
 			</ul>
