--- a/suclinic/templates/right.navbar.html
+++ b/suclinic/templates/right.navbar.html
@@ -6,8 +6,14 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
 						<li style="margin-top: 20px;"><a href="#" id="top"><img src="{% static 'img/right_top.png' %}" class="img-responsive"></a></li>
-						<li style="color: white;"><a href="{% url 'accounts:signup' %}">JOIN</a></li>
-						<li style="color: white;"><a href="{% url 'accounts:login' %}">LOG IN</a></li>
+						{% if not user.is_authenticated %}
+							<li style="color: white;"><a href="{% url 'accounts:signup' %}">JOIN</a></li>
+						{% endif %}
+						{% if user.is_authenticated %}
+							<li style="color: white;"><a href="{% url 'accounts:logout' %}">LOG OUT</a></li>
+						{% else %}
+							<li style="color: white;"><a href="{% url 'accounts:login' %}">LOG IN</a></li>
+						{% endif %}
 						<li><a href="#"><img src="{% static 'img/right_tel.png' %}" class="img-responsive"></a></li>
 						<li><a href="#"><img src="{% static 'img/right_counsel.png' %}" class="img-responsive"></a></li>
 						<li><a href="#"><img src="{% static 'img/right_kakao.png' %}" class="img-responsive"></a></li>
